--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,27 @@
 {
     "authors": [
         {
+            "name": "Plugin Pizza",
+            "email": "info@plugin.pizza",
+            "homepage": "https://plugin.pizza",
+            "role": "Developer"
+        },
+        {
             "name": "Barry Ceelen",
             "email": "b@rryceelen.com",
-            "homepage": "https://github.com/functionsfile",
+            "homepage": "https://github.com/barryceelen",
             "role": "Developer"
         }
     ],
     "description": "Your one-stop shop for removing WordPress comment functionality",
-    "homepage": "https://github.com/functionsfile/uncomment",
+    "homepage": "https://github.com/pluginpizza/uncomment",
     "keywords": [
         "comments",
         "plugin",
         "wordpress"
     ],
     "license": "GPL-3.0-or-later",
-    "name": "functionsfile/uncomment",
+    "name": "pluginpizza/uncomment",
     "require": {
         "composer/installers":"^2.0"
     },
